Fixed wrap

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box ;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    flex: wrap;
+    flex-wrap: wrap;
 }
 
 .header > menu {
